# pod2text

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: deploy_docker.sh  docker_entrypoint.sh  setup_env.py
src/pod2text/: __init__.py  catalog.py  cli.py  download.py  env.py  main.py  podcast.py  server.py  setup_wizard.py  summarize.py  telegram.py  transcribe.py
tests/: test_env.py  test_podcast.py  test_server.py  test_summarize.py  test_telegram.py
